--- a/src/app/moviepage/moviepage.component.html
+++ b/src/app/moviepage/moviepage.component.html
@@ -1,50 +1,103 @@
-<div class="wrapper">
+<div class="welcome-text grey-bg full-width">
+  <h1 class="font-weight-bold font-italic">Welcome to movie review place</h1>
+</div>
 
-  <div class="movie" *ngFor="let movie of movieData">
-    <img (click)="showLightBox(movie.id)" class="movie-image" [src]="movie.image" [alt]="movie.name">
-    <h1>{{ movie.name }}</h1>
-    <p>{{ movie.synopsis }}</p>
-    <p>{{ movie.id }}</p>
-  </div>
-
-  <div class="lightbox" *ngIf="lightBox">
-    <div class="movie">
-        <img class="movie-image" [src]="lightBoxImg" [alt]="movieId">
-        <h1>{{ lightBoxMovie }}</h1>
-        <p>{{ lightBoxMovieSynopsis }}</p>
+<div class="container bg shadow-hard">
+  <div class="wrapper grid">
+    <div (click)="showLightBox(movie.id)" class="movie col-md clickable nice-width" *ngFor="let movie of movieData">
+      <h1 class="movie-name">{{ movie.name }}</h1>
+      <img class="movie-image" [src]="movie.image" [alt]="movie.name">
+      <h3> {{ movie.year }} </h3>
+      <p>{{ movie.synopsis }}</p>
+      <p>IMDb rating: {{movie.rating }}/5</p>
     </div>
-    <div class="comments">
-      <div class="comment" *ngFor="let comment of commentData">
-        <h3 (click)="userReviews(comment.username)" class="username">{{ comment.username }}</h3>
-        <p>{{ comment.comment }}</p>
-      </div>
-    </div>
-    <button (click)="lightBox=false;">close movie</button>
-  
-    <div class="user-lightbox" *ngIf="userLightBox">
-      <div class="user">
-        <h1>Listings for {{ userName }}</h1>
 
-        <div class="user-listings" *ngFor="let usrComment of usersComments">
-          <div class="row">
-            <div class="movie-image col-sm">
-                <img class="small-movie-image" [src]="movieData[usrComment.movieId].image">
-            </div>
-            <div class="movie-info col-sm" >
-                <h1> {{ movieData[usrComment.movieId].name }} </h1>
-                <h3> {{ movieData[usrComment.movieId].year }} </h3>
-                <p> {{ movieData[usrComment.movieId].synopsis }} </p>
-            </div>
-        </div>
-          <div class="comment row">
-            <h3> {{ usrComment.comment }} </h3>
+    <div class="lightbox dark-bg" *ngIf="lightBox">
+        <div class="welcome-text grey-bg full-width">
+          <div (click)="closeLightBox()" class="btn back left">
+            <i class="fa fa-arrow-left inline" aria-hidden="true"></i>
+            <h4 class="inline align-middle">go back</h4>
           </div>
+          <h1 class="font-weight-bold font-italic inline">{{ lightBoxMovie }}</h1>
+        </div>
+        <div class="container no-padding bg shadow-hard">
+          <div class="wrapper">
+                
+              <div class="movie movie-info">
+                <div class="row">
+                    <div class="col-sm">
+                    <img class="movie-image" [src]="lightBoxImg" [alt]="movieId">
+                  </div>
+                  <div class="col-sm">
+                    <h1 class="movie-name">{{ lightBoxMovie }}</h1>
+                    <p>{{ lightBoxMovieSynopsis }}</p>
+                    <p>Users avg. rating: {{ movieAverage }} </p>
+                  </div>
+                  </div>
+              </div>
+
+              <h1 style="color: white; padding: 10px;">Comments [{{ commentData.length }}]</h1>
+
+              <div class="comments">
+                <div *ngFor="let comment of commentData">
+                  <div class="comment">
+                    <h2>{{ comment.comment }}</h2>
+                    <h3>{{ comment.rating }}/5</h3>
+                  </div>
+                  <h3 (click)="userReviews(comment.username)" class="username clickable">{{ comment.username }}</h3>
+                </div>
+              </div>
+
+              <h1 style="color: white; padding: 10px;">Leave a nice comment</h1>
+
+              <div class="new-comment full-width">
+                <label>Username</label>
+                <br>
+                <input class="nice-width" [(ngModel)]="newUser" type="text" placeholder="user22" >
+                <br>
+                <label>Comment</label>
+                <br>
+                <input class="nice-width" [(ngModel)]="newComment" type="text" placeholder="great movie!">
+                <br>
+                <label>Rating</label>
+                <br>
+                <select class="nice-width" [(ngModel)]="newRating">
+                    <option value="" disabled selected hidden>1 - 5</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                  </select>
+                <br>
+                <button class="nice-width" (click)="getComment()">Send comment</button>
+              </div>
+        
+          <div class="user-lightbox container full-width" *ngIf="userLightBox">
+            <h1 (click)="closeUserLightBox()">go back to {{ lightBoxMovie }}</h1>
+            <div class="user">
+              <h1>Listings for {{ userName }}</h1>
+
+              <div class="user-listings" *ngFor="let usrComment of usersComments">
+                <div class="row">
+                  <div class="movie-image col-sm">
+                      <img class="movie movie-image" [src]="movieData[usrComment.movieId].image">
+                  </div>
+                  <div class="movie-info col-sm" >
+                      <h1> {{ movieData[usrComment.movieId].name }} </h1>
+                      <h3> {{ movieData[usrComment.movieId].year }} </h3>
+                      <p> {{ movieData[usrComment.movieId].synopsis }} </p>
+                  </div>
+              </div>
+                <div class="comment row">
+                  <h3> {{ usrComment.comment }} </h3>
+                </div>
+              </div>
+            </div>
+          </div> <!-- end of user-lightbox -->
+
         </div>
       </div>
-
-      <button (click)="userLightBox=false;" class="user">close {{ userName }} </button>
-    </div>
-
+    </div> <!-- end of lightbox -->
   </div>
-
 </div>
