--- a/src/app/moviepage/moviepage.component.scss
+++ b/src/app/moviepage/moviepage.component.scss
@@ -100,6 +100,12 @@ h1, h2, h3, h4, p {
     background: $bg-color-white;
     text-align: center;
     overflow-y: auto;
+
+    .welcome-text{
+        position: sticky;
+        top: 0;
+        z-index: 9999999999;
+    }
 }
 
 .user-lightbox {
